--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -8,6 +8,7 @@ body{
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
+      background-size: 2000px 1300px;
 }
 
 .header{
